--- a/views/chat.pug
+++ b/views/chat.pug
@@ -6,7 +6,7 @@ html
     link(rel='stylesheet', href='../css/style.css')
   body
     p.h2= 'Usuario: '+user
-    #msgs
+    #msgs.container
     .footer
       form
         .row
